--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -37,8 +37,8 @@
 
     <div id="mobile-menu" class="hidden flex flex-col bg-[#0F172A] text-white md:hidden py-4 space-y-3 shadow-lg">
         <a href="../index.html" class="hover:text-yellow-400 ml-6 w-[250px] border-b-2 border-yellow-500">Accueil</a>
-        <a href="#" class="hover:text-yellow-400 ml-6 w-[250px] border-b-2 border-yellow-500">Menu</a>
-        <a href="#" class="hover:text-yellow-400 ml-6 w-[250px] border-b-2 border-yellow-500">Contact</a>
+        <a href="Menu.html" class="hover:text-yellow-400 ml-6 w-[250px] border-b-2 border-yellow-500">Menu</a>
+        <a href="Contact.html" class="hover:text-yellow-400 ml-6 w-[250px] border-b-2 border-yellow-500">Contact</a>
         <button id="btn-panier"
             class="bg-yellow-500 flex hover:bg-yellow-400 text-white ml-6 px-4 py-2 font-semibold w-[120px] space-x-2"><span>Pannier</span>
             <img src="../images/Shopping cart.png" alt="Shopping cart" class="w-5 h-5" /></button>
