--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="nav-right">
                 <ul>
                     <li><a style="color: #FEA116;" href="index.html">Acceuil</a></li>
-                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="pages/Menu.html">Menu</a></li>
                     <li><a href="pages/Contact.html">Contact</a></li>
                 </ul>
                 <button onclick="panierOn()">Pannier<i class="fa-solid fa-cart-shopping"></i></button>
@@ -266,34 +266,8 @@
           <!--  -->
           <div class="p-content flex flex-col justify-center items-center">
             <!-- chaque plat -->
-            <div
-              class="panier-plat flex justify-between items-center w-4/4 p-3.5"
-            >
-              <img src="" alt="plat" />
-              <h2 class="text-3xl">Chicken burger</h2>
-              <div class="pm">
-                <button class="text-4xl decrease">-</button>
-                <input
+           
 
-                  readonly
-                  type="number"
-                  min="1"
-                  class="text-2xl flex justify-center items-center plat-count"
-                />
-                <button class="text-4xl increase">+</button>
-              </div>
-              <select class="text-3xl plat-size">
-                <option value="">S</option>
-                <option value="">L</option>
-                <option value="">XL</option>
-              </select>
-              <!-- price n cnacel -->
-              <div class="pc flex justify-between w-1/4">
-                <label class="text-3xl price-tag">$100</label>
-                <button class="text-3xl cancel">X</button>
-              </div>
-            </div>  
-          
           </div>
         </div>
         <!-- panier sidebar -->
