--- a/index.html
+++ b/index.html
@@ -302,12 +302,9 @@
           <h1 class="text-3xl">Sommaire</h1>
           <hr />
           <div class="grid grid-cols-2 gap-2">
-            <h4>3 Plat</h4>
-            <h4>200</h4>
-            <h4>Livraison:</h4>
-            <h4>50</h4>
+            <h4 class="plat-num">3 Plats</h4>
           </div>
-          <h2 class="text-2xl">Total: 200</h2>
+          <h2 class="text-2xl total-prix">Total: 200</h2>
           <button id="commander" onclick="toPay()" class="p-2 rounded-2xl">
             Commander
           </button>
