--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -6,6 +6,11 @@
     <title>Menu</title>
     <link href="../output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+   <link href="../css/panier.css" rel="stylesheet" />
+    <!-- panier script -->
+    <script src="../js/panier.js" defer></script>
+    <!--  -->
 </head>
 <body>
      <header class="bg-[#0F172A] text-white flex items-center justify-between px-6 py-4">
