--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -21,7 +21,7 @@
       <a href="../index.html" class="hover:text-yellow-400">Accueil</a>
       <a href="Menu.html" class="hover:text-yellow-400">Menu</a>
       <a href="Contact.html" class="hover:text-yellow-400">Contact</a>
-      <button id="btn-panier"
+      <button onclick="panierOn()" id="btn-panier"
         class="hidden md:flex items-center bg-yellow-500 hover:bg-yellow-400 text-white px-4 py-2 font-semibold space-x-2">
         <span>Pannier</span>
         <img src="../images/Shopping cart.png" alt="Shopping cart" class="w-5 h-5" />
