--- a/pages/Detailplat.html
+++ b/pages/Detailplat.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../css/detail.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
    <link href="../css/panier.css" rel="stylesheet" />
     <!-- panier script -->
     <script src="../js/panier.js" defer></script>
