--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -6,6 +6,7 @@
     <title>Menu</title>
     <link href="../output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
    <link href="../css/panier.css" rel="stylesheet" />
     <!-- panier script -->
