--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -7,10 +7,10 @@
     <title>Contact</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/Contact.css">
-    <link href="../css/panier.css" rel="stylesheet" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+   <link href="../css/panier.css" rel="stylesheet" />
     <!-- panier script -->
     <script src="../js/panier.js" defer></script>
     <!--  -->
@@ -267,7 +267,7 @@
             </p>
         </div>
     </footer>
-
+    
    <div class="Z fixed">
       <!-- panier popup -->
       <div class="panier w-7/12 border-2 rounded-3xl">
@@ -317,9 +317,9 @@
           <h1 class="text-3xl">Sommaire</h1>
           <hr />
           <div class="grid grid-cols-2 gap-2">
-            <h4 class="plat-num">3 Plats</h4>
+            <h4 class="plat-num"></h4>
           </div>
-          <h2 class="text-2xl total-prix">Total: 200</h2>
+          <h2 class="text-2xl total-prix"></h2>
           <button id="commander" onclick="toPay()" class="p-2 rounded-2xl">
             Commander
           </button>
@@ -335,18 +335,18 @@
         <hr />
         <h2 class="text-2xl">Nom</h2>
         <div class="flex justify-between gap-5">
-          <input type="text" placeholder="Nom" />
-          <input type="text" placeholder="Prenom" />
+          <input type="text" class="pay-nom" placeholder="Nom" />
+          <input type="text" class="pay-prenom" placeholder="Prenom" />
         </div>
         <h2>Email</h2>
         <input type="email" placeholder="@gmail.com" class="in-email w-full" />
         <h2>Adresse</h2>
         <div class="adress grid">
-          <input type="text" placeholder="Ligne 1" />
-          <input type="text" placeholder="Ligne 2" />
-          <input type="text" placeholder="ville" />
-          <input type="text" placeholder="region" />
-          <input type="text" placeholder="Code Postal" />
+          <input type="text" class="pay-l1" placeholder="Ligne 1" />
+          <input type="text" class="pay-l2" placeholder="Ligne 2" />
+          <input type="text" class="pay-v" placeholder="ville" />
+          <input type="text" class="pay-r" placeholder="region" />
+          <input type="text" class="pay-pos" placeholder="Code Postal" />
         </div>
         <h3 class="text-2xl">Method de paiement:</h3>
         <div class="">
@@ -356,7 +356,7 @@
           </div>
           <div class="w-full flex justify-start items-center">
             <input class="" type="radio" name="pay" />
-            <img src="images/paypal.png" alt="paypal" />
+            <img src="../images/paypal.png" alt="paypal" />
           </div>
         </div>
         <button class="c-achat p-2">Confirmer</button>
