--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/acceuil.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
+<meta name="keywords" content="restaurant, FoodOrder+, plats du jour, menu spécial, livraison repas, commande en ligne, avis clients, témoignages restaurant, cuisine maison, meilleur restaurant, food maroc, restauration rapide, menu du jour">
+<title>bienvenue sur FoodOrde</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
    <link href="css/panier.css" rel="stylesheet" />
     <!-- panier script -->
