--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="à propos restaurant, contact restaurant, chef cuisinier, adresse restaurant, téléphone restaurant, réseaux sociaux, formulaire contact, Google Maps restaurant, FAQ restaurant, informations restaurant, FoodOrder+">
     <title>Contact</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
 
