--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="menu restaurant, plats disponibles, entrées, plats principaux, desserts, boissons, carte restaurant, recherche plat, filtre repas, pagination, détails plat, commander repas, food menu">
     <title>Menu</title>
     <link href="../output.css" rel="stylesheet">
     <link href="../css/panier.css" rel="stylesheet" />
