--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <title>bienvenue sur FoodOrde</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
    <link href="css/panier.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <!-- panier script -->
     <script src="js/panier.js" defer></script>
     <!--  -->
